--- a/styles/colors.css
+++ b/styles/colors.css
@@ -1,6 +1,25 @@
 :root {
     /* SEMANTIC TOKENS */
+    --color--primary-500: var(--color--primary-light-500);
+    --color--primary-400: var(--color--primary-light-400);
+    --color--primary-300: var(--color--primary-light-300);
+    --color--primary-200: var(--color--primary-light-200);
+    --color--primary-100: var(--color--primary-light-100);
+    --color--primary-000: var(--color--primary-light-000);
 
+    --color--secondary-500: var(--color--secondary-light-500);
+    --color--secondary-400: var(--color--secondary-light-400);
+    --color--secondary-300: var(--color--secondary-light-300);
+    --color--secondary-200: var(--color--secondary-light-200);
+    --color--secondary-100: var(--color--secondary-light-100);
+    --color--secondary-000: var(--color--secondary-light-000);
+
+    --color--neutral-500: var(--color--neutral-light-500);
+    --color--neutral-400: var(--color--neutral-light-400);
+    --color--neutral-300: var(--color--neutral-light-300);
+    --color--neutral-200: var(--color--neutral-light-200);
+    --color--neutral-100: var(--color--neutral-light-100);
+    --color--neutral-000: var(--color--neutral-light-000);
 
     /* SEMANTIC PRIMITIVES */
     --color--primary-dark-500: var(--color--green-1000);
