--- a/styles/typography.css
+++ b/styles/typography.css
@@ -1,14 +1,54 @@
+@import url('https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Outfit:wght@100..900&display=swap');
+
 :root {
-    --font-heading: 'Roboto', sans-serif;
-    --font-body: 'Roboto', sans-serif;
+    --font-heading: 'Climate Crisis';
+    --font-body: 'Outfit';
 
-    --font-size-h1: 16px;
-    --font-size-h2: 16px;
-    --font-size-h3: 16px;
-    --font-size-h4: 16px;
-    --font-size-h5: 16px;
-    --font-size-h6: 16px;
+    --font-size-h1: 3rem;
+    --font-size-h2: 2.5rem;
+    --font-size-h3: 2rem;
+    --font-size-h4: 1.75rem;
+    --font-size-h5: 1.5rem;
+    --font-size-h6: 1.25rem;
 
-    --font-size-b1: 16px;
-    --font-size-b2: 16px;
+    --font-size-b1: 1rem;
+    --font-size-b2: 0.75rem;
+}
+
+html {
+    font-family: var(--font-body), sans-serif;
+    font-size: var(--font-size-b1);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: var(--font-heading), sans-serif;
+}
+
+h1 {
+    font-size: var(--font-size-h1);
+}
+
+h2 {
+    font-size: var(--font-size-h2);
+}
+
+h3 {
+    font-size: var(--font-size-h3);
+}
+
+h4 {
+    font-size: var(--font-size-h4);
+}
+
+h5 {
+    font-size: var(--font-size-h5);
+}
+
+h6 {
+    font-size: var(--font-size-h6);
 }
